# comfyui-3d-viewer-pro

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  shared.py
js/: viewer3d.js
js/lib/: FBXLoader.js  STLLoader.js  TransformControls.js
js/styles/: viewer3d.css
js/viewer/: AnimationManager.js  CameraController.js  LightingManager.js  ModelLoader.js  RenderPassManager.js  SceneManager.js  UIOverlay.js  ViewerApp.js
js/widgets/: Viewer3DWidget.js
nodes/: __init__.py  advanced_render.py  load_3d_model.py  turntable_3d.py
server/: routes.py
